Tradução de comandos do sistema de party