@@ -11,7 +11,6 @@ import com.gmail.nossr50.util.player.UserManager;
 import com.gmail.nossr50.util.skills.SkillTools;
 import com.gmail.nossr50.util.skills.SkillUtils;
 import com.gmail.nossr50.util.text.StringUtils;
-import com.google.common.collect.ImmutableList;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
@@ -21,10 +20,11 @@ import java.util.List;
 import java.util.Locale;
 
 public final class CommandUtils {
-    public static final List<String> TRUE_FALSE_OPTIONS = ImmutableList.of("on", "off", "true", "false", "enabled", "disabled");
-    public static final List<String> RESET_OPTIONS = ImmutableList.of("clear", "reset");
+    public static final List<String> TRUE_FALSE_OPTIONS = java.util.List.of("on", "off");
+    public static final List<String> RESET_OPTIONS = java.util.List.of("clear", "reset");
 
-    private CommandUtils() {}
+    private CommandUtils() {
+    }
 
     public static boolean isChildSkill(CommandSender sender, PrimarySkillType skill) {
         if (skill == null || !SkillTools.isChildSkill(skill)) {
@@ -36,7 +36,7 @@ public final class CommandUtils {
     }
 
     public static boolean tooFar(CommandSender sender, Player target, boolean hasPermission) {
-        if(!target.isOnline() && !hasPermission) {
+        if (!target.isOnline() && !hasPermission) {
             sender.sendMessage(LocaleLoader.getString("Inspect.Offline"));
             return true;
         } else if (sender instanceof Player && !Misc.isNear(((Player) sender).getLocation(), target.getLocation(), mcMMO.p.getGeneralConfig().getInspectDistance()) && !hasPermission) {
@@ -72,10 +72,9 @@ public final class CommandUtils {
     /**
      * Checks if there is a valid mcMMOPlayer object.
      *
-     * @param sender CommandSender who used the command
-     * @param playerName name of the target player
+     * @param sender      CommandSender, who used the command
+     * @param playerName  name of the target player
      * @param mcMMOPlayer mcMMOPlayer object of the target player
-     *
      * @return true if the player is online and a valid mcMMOPlayer object was found
      */
     public static boolean checkPlayerExistence(CommandSender sender, String playerName, McMMOPlayer mcMMOPlayer) {
@@ -210,14 +209,14 @@ public final class CommandUtils {
         if (SkillTools.isChildSkill(skill)) {
             return LocaleLoader.getString("Skills.ChildStats", LocaleLoader.getString(StringUtils.getCapitalized(skill.toString()) + ".Listener") + " ", profile.getSkillLevel(skill));
         }
-        if (profile.getSkillLevel(skill) == mcMMO.p.getSkillTools().getLevelCap(skill)){
+        if (profile.getSkillLevel(skill) == mcMMO.p.getSkillTools().getLevelCap(skill)) {
             return LocaleLoader.getString("Skills.Stats", LocaleLoader.getString(StringUtils.getCapitalized(skill.toString()) + ".Listener") + " ", profile.getSkillLevel(skill), profile.getSkillXpLevel(skill), LocaleLoader.getString("Skills.MaxXP"));
         }
         return LocaleLoader.getString("Skills.Stats", LocaleLoader.getString(StringUtils.getCapitalized(skill.toString()) + ".Listener") + " ", profile.getSkillLevel(skill), profile.getSkillXpLevel(skill), profile.getXpToLevel(skill));
     }
 
     private static void printGroupedSkillData(Player inspectTarget, CommandSender display, String header, List<PrimarySkillType> skillGroup) {
-        if(UserManager.getPlayer(inspectTarget) == null)
+        if (UserManager.getPlayer(inspectTarget) == null)
             return;
 
         PlayerProfile profile = UserManager.getPlayer(inspectTarget).getProfile();
@@ -255,7 +254,6 @@ public final class CommandUtils {
      * Get a matched player name if one was found in the database.
      *
      * @param partialName Name to match
-     *
      * @return Matched name or {@code partialName} if no match was found
      */
     public static String getMatchedPlayerName(String partialName) {
@@ -265,8 +263,7 @@ public final class CommandUtils {
             if (matches.size() == 1) {
                 partialName = matches.get(0);
             }
-        }
-        else {
+        } else {
             Player player = mcMMO.p.getServer().getPlayer(partialName);
 
             if (player != null) {
@@ -279,7 +276,6 @@ public final class CommandUtils {
 
     /**
      * Attempts to match any player names with the given name, and returns a list of all possibly matches.
-     *
      * This list is not sorted in any particular order.
      * If an exact match is found, the returned list will only contain a single result.
      *
@@ -291,10 +287,10 @@ public final class CommandUtils {
 
         for (OfflinePlayer offlinePlayer : mcMMO.p.getServer().getOfflinePlayers()) {
             String playerName = offlinePlayer.getName();
-            
+
             if (playerName == null) { //Do null checking here to detect corrupted data before sending it throuogh .equals
-            	System.err.println("[McMMO] Player data file with UIID " + offlinePlayer.getUniqueId() + " is missing a player name. This may be a legacy file from before bukkit.lastKnownName. This should be okay to ignore.");
-            	continue; //Don't let an error here interrupt the loop
+                mcMMO.p.getLogger().warning("Player data file with UIID " + offlinePlayer.getUniqueId() + " is missing a player name. This may be a legacy file from before bukkit.lastKnownName. This should be okay to ignore.");
+                continue; //Don't let an error here interrupt the loop
             }
 
             if (partialName.equalsIgnoreCase(playerName)) {
